syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

package Proto.MongoDB;



message ItemNum 
{
    int32 id =1;
    int32 num =2;
    string uuid =3;
    int32 level =4;
    bool is_lock = 5;
}

//game
message GamePlayerEntity
{
    string uuid = 1;
    string account_uuid = 2;
    int32 coin = 3;
    int32 gold = 4;
    string last_ip = 5;
}


//hero
message HeroMagic
{
    int32 level = 1;
    int32 exp = 2;
    bool actived = 3;
}

//游戏服务器信息
message GateServerInfoEntity
{
     string uuid = 1 ;
	 string host=2;//主机地址
	 int32 port=3;//主机端口
	 int32 server_id=4;//服务器ID
     int32 max_player_Count=5;//最大服务数
     int32 current_player_count = 6;//当前玩家数
     int32 client_id = 7;
     string service_host = 9; //center or battle server 
     int32 service_port = 10; //port
}

//用户当前的服务器信息
message UserSessionInfoEntity
{
     string uuid = 1;
     string account_uuid = 2;
     int32 gate_server_id = 3;
     int32 battle_server_id = 4;
     string token = 5; //token
     int32 level_id = 6; //current level 
}

message PlayerBattleServerEntity
{
    string uuid = 1;
    int32 server_id =2;
    int64 join_time = 3;
    int32 level_id =4; //level id for selected level data
    int32 client_id =5;
    string host = 6;
    int32 port =7;
    int32 max_player_count = 8;
}